# aoc-agent

./: .gitignore  README.md  example.env  pyproject.toml
.devcontainer/: devcontainer.json
advent_of_code/: agents.py  flow.py  flow2.py  tools.py
pyapp/: agents.py  app.py  models.py  tools.py
webapp/: index.html  main.py  pyscript.json
